(fix): carousel overflow should be hiddden

--- a/front/app/stylesheets/components/components.scss
+++ b/front/app/stylesheets/components/components.scss
@@ -183,6 +183,7 @@ minds-carousel{
   left: 0;
   width: 100%;
   height: 380px;
+  overflow: hidden;
   //z-index:-1;
 
   minds-banner{
